--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "uniqid": "^5.4.0",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/uniqid": "^5.3.2"
   }
 }
