--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/uniqid": "^5.3.2"
+    "@types/uniqid": "^5.3.2",
+    "supabase": ">=1.8.1"
   }
 }
