--- a/package.json
+++ b/package.json
@@ -11,37 +11,39 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slider": "^1.1.2",
-    "@stripe/stripe-js": "^1.54.1",
-    "@supabase/auth-helpers-nextjs": "^0.7.2",
-    "@supabase/auth-helpers-react": "^0.4.0",
+    "@stripe/stripe-js": "^1.54.2",
+    "@supabase/auth-helpers-nextjs": "^0.7.3",
+    "@supabase/auth-helpers-react": "^0.4.1",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
-    "@supabase/supabase-js": "^2.26.0",
+    "@supabase/supabase-js": "^2.31.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^12.3.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
-    "stripe": "^12.8.0",
-    "tailwind-merge": "^1.13.0",
+    "stripe": "^12.16.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "uniqid": "^5.4.0",
     "use-sound": "^4.0.1",
-    "zustand": "^4.3.8"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/uniqid": "^5.3.2",
-    "supabase": ">=1.8.1"
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "supabase": "^1.82.2"
   }
 }
